# cecs

./: .RData  .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  cran-comments.md
R/: cec.R  utils.R
cec2005/: Makefile  global.h  main
cec2013/: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS
cec2014/: DESCRIPTION  NAMESPACE  cec14_test_func.cpp  main.cpp  readme.txt
cec2017/: DESCRIPTION  NAMESPACE
cec2021/: DESCRIPTION  NAMESPACE  cec21_test_func.cpp  de.h  lshade.cpp  main.cpp  readme.txt  search_algorithm.cpp
doc/: readme.md
inst/: readme.md
man/: cec.Rd  cec2013.Rd  cec2014.Rd  cec2015.Rd  cec2017.Rd  cec2019.Rd  cec2021.Rd  cec2022.Rd  cecs_tmp_dirpath.Rd  clean.Rd  destination_file.Rd  download_data.Rd  get_cec_dirpath.Rd  get_os_name.Rd  unzip_data.Rd  win_tmp_dirpath.Rd
rewritten/: CMakeLists.txt
rewritten/cec/: CMakeLists.txt  compile_commands.json  main.c
rewritten/cec/.clangd/index/: affine_trans.c.27BCF592D85C3E9F.idx  affine_trans.h.4C1B6727DD8CFCB1.idx  basic_funcs.c.DA44CAD71CD94D5D.idx  basic_funcs.h.BC690A7957EFBE7F.idx  cec.c.A0121BE6789F327D.idx  cec.h.421C3E93E7A4DE32.idx  complex_funcs.c.EE9FB0BACEABB8EF.idx  complex_funcs.h.2685DAAAFB253CE6.idx  hybrid_funcs.c.51B16363CA07EDD7.idx  hybrid_funcs.h.76ADE07360C9BEC4.idx  interfaces.c.3E43220B1F743A8F.idx  interfaces.h.784A682A802382B0.idx  main.c.51030ECE7EA7B4E4.idx  utils.c.070BD9C2EDF46115.idx  utils.h.9EF4625E7D0F1217.idx
rewritten/cec/include/: basic_funcs.h  cec.h  complex_funcs.h  hybrid_funcs.h  interfaces.h  utils.h
rewritten/cec/src/: basic_funcs.c  cec.c  complex_funcs.c  hybrid_funcs.c  interfaces.c  utils.c
rewritten/cec/test/: basic_test.c
rewritten/cec2014/include/: cec2014.h  cec2014_functions.h  cec2014_interface.h  cecs.h
rewritten/cec2014/src/: cec2014.c  cec2014_functions.c  cec2014_interface.c  cecs.c
rewritten/cec2015/: CMakeLists.txt  cecs-gprof.output
rewritten/cec2015/include/: cec2015.h  cec2015_functions.h  cec2015_interface.h  cecs.h
rewritten/cec2015/src/: cec2015.c  cec2015_functions.c  cec2015_interface.c  cecs.c
rewritten/cec2017/: compile_commands.json  valgrind.check
rewritten/cec2017/include/: cec2017_functions.h  cec2017_interface.h
rewritten/cec2017/src/: cec2017.c  cec2017_functions.c  cec2017_interface.c  cecs.c
rewritten/cec2019/include/: cec2019.h  cec2019_functions.h  cec2019_interface.h
rewritten/cec2019/src/: cec2019.c  cec2019_functions.c  cec2019_interface.c  cecs.c
rewritten/cec2021/include/: cec2021.h  cec2021_functions.h  cec2021_interface.h  cecs.h
rewritten/cec2021/src/: cec2021.c  cec2021_functions.c  cec2021_interface.c  cecs.c
rewritten/include/: cec2017.h  cec2017_functions.h  cecs.h
rewritten/src/: cec2017_functions.c  cec2017_interface.c  cecs.c
rewritten/test/: test_basics.c
src/: Makevars  affine_trans.c  basic_funcs.c  cec2008.c  cec2008_functions.c  cec2013.c  (+40 more)
(+70 files in other folders)
